# is-it-true

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/is_it_true/: __init__.py  agent.py  cli.py  config.py  display.py  logging.py  models.py  operations.py  utils.py
src/is_it_true/engines/: __init__.py  base.py  duckduckgo.py  exa.py  fallback.py  tavily.py
src/is_it_true/formatters/: __init__.py  html.py  pdf.py
src/is_it_true/multimedia/: image_analyzer.py
src/is_it_true/subagents/: contradiction_resolver.py  evidence_extractor.py  gap_detector.py  language_detector.py  query_planner.py  source_evaluator.py  verdict_judge.py
