[project]
name = "is-it-true"
version = "0.1.0"
description = "AI-powered fact-checking agent with multi-round investigation and chain of evidence"
readme = "README.md"
authors = [
    { name = "SNRainiar", email = "rainiar@foxmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "json-repair>=0.30",
    "litellm>=1.0",
    "reportlab>=4.2",
    "rich>=15.0.0",
    "tavily-python>=0.7",
    "exa-py>=1.0",
    "duckduckgo-search>=8.0",
    "trafilatura>=2.0",
    "httpx>=0.28",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
is-it-true = "is_it_true.cli:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
